Enhanced SEO: Updated meta tags, sitemap, robots.txt and semantic HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,47 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gokul Kannan Ganesamoorthy - Dino Portfolio</title>
+  <meta name="description"
+    content="The Offline Portfolio of Gokul Kannan Ganesamoorthy. A creative developer and ethical hacker. Play the Dino Game to explore my projects, skills, and experience." />
+  <meta name="keywords"
+    content="Gokul Kannan Ganesamoorthy, Web Developer, Ethical Hacker, Interactive Portfolio, React Developer, Creative Developer, Dino Game Portfolio" />
+  <meta name="author" content="Gokul Kannan Ganesamoorthy" />
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="robots" content="index, follow" />
+
+  <meta name="google-site-verification" content="r3uWqX5kK-iVeb3vTcgbGQiukKp-P6ev1WspKI_6bLw" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://gokulkannanganesamoorthy-dino-portfolio.vercel.app" />
+  <meta property="og:title" content="Gokul Kannan Ganesamoorthy - The Offline Portfolio" />
+  <meta property="og:description"
+    content="The internet is down, but my portfolio isn't. Play the interactive Dino Game to explore my work in Web Development and Security." />
+  <meta property="og:image" content="/og-image.webp" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://gokulkannanganesamoorthy-dino-portfolio.vercel.app" />
+  <meta property="twitter:title" content="Gokul Kannan Ganesamoorthy - The Offline Portfolio" />
+  <meta property="twitter:description"
+    content="The internet is down, but my portfolio isn't. Play the interactive Dino Game to explore my work in Web Development and Security." />
+  <meta property="twitter:image" content="/og-image.webp" />
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Gokul Kannan Ganesamoorthy",
+      "url": "https://gokulkannanganesamoorthy-dino-portfolio.vercel.app",
+      "jobTitle": "Creative Developer & Security Specialist",
+      "sameAs": [
+        "https://github.com/gokulkannanganesamoorthy",
+        "https://linkedin.com/in/gokulkannanganesamoorthy"
+      ],
+      "description": "I'm a passionate designer and developer who blends creativity with technical precision. My work bridges the gap between design and security."
+    }
+  </script>
 </head>
 
 <body>
